--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip3 install -r requirements.txt -r dev_requirements.txt
 
 script:
-  - pytest tests
+  - pytest
 
 deploy:
   provider: pypi
