--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
 before_deploy:
   - pyinstaller bin/launcher.spec
   - mv dist/launcher ./launcher_$TRAVIS_OS_NAME && rm -rf dist/
+  - RELEASE_SHASUM=$(sha1sum ./launcher_$TRAVIS_OS_NAME)
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then python3 setup.py sdist bdist_wheel && python3 -m twine check dist/*; fi
 
 deploy:
@@ -41,6 +42,7 @@ deploy:
     file: ./launcher_$TRAVIS_OS_NAME
     skip_cleanup: true
     name: Release - $TRAVIS_TAG
+    body: $RELEASE_SHASUM
     on:
       repo: Drakkar-Software/OctoBot-Launcher
       branch: master
