--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,15 +14,12 @@ install:
 
 build_script:
   - ps: Start-FileDownload 'https://raw.githubusercontent.com/Drakkar-Software/OctoBot/dev/interfaces/web/static/favicon.ico'
-  - "echo f | xcopy /f /y favicon.ico interfaces\\web\\static\\favicon.ico"
+  - "echo f | xcopy /f /y favicon.ico launcher\\static\\favicon.ico"
   - "rd /s /q launcher\\app  launcher\\tools"
   - "del /q launcher\\*.py launcher\\static\\* launcher\\templates\\*"
   - "%PYTHON%\\Scripts\\pyinstaller.exe bin/launcher.spec"
   - "echo f | xcopy /f /y dist\\launcher.exe dist\\launcher_windows.exe"
   - "powershell get-filehash -algorithm sha1 dist\\launcher_windows.exe"
-
-test_script:
-  - "%PYTHON%\\python.exe -m pytest"
 
 artifacts:
   - path: dist/launcher_windows.exe
