--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ notifications:
 sudo: enabled
 os: linux
 cache: pip
+python: 3.7-dev
 
 matrix:
   include:
@@ -20,7 +21,6 @@ matrix:
         - python3 -m venv venv || travis_terminate 1;
         - source venv/bin/activate;
     - os: linux
-      python: nightly
       language: python
 
 install:
